# analyzer-gpt

./: .gitignore  README.md  pyproject.toml  r.bat  requirements.txt
analyzer_gpt/: streamlit_ui.py
analyzer_gpt/agents/: code_evaluator_agent.py  code_executor_agent.py  data_analyzer_agent.py
analyzer_gpt/config/: loader.py
analyzer_gpt/exception/: custom_exception.py
analyzer_gpt/logger/: logger.py
analyzer_gpt/models/: gemini_model_client.py  ollama_model_client.py  open_router_model.py
analyzer_gpt/notebooks/: experiments.ipynb
analyzer_gpt/prompts/: agent_prompts.py
analyzer_gpt/src/: main.py
analyzer_gpt/teams/: data_analyzer_team.py
analyzer_gpt/utils/: docker_util.py  docker_utils.py  paths.py
config/: constants.py  loader.py
exception/: custom_exception.py
logger/: logger.py
